Updated projects list and added mobile optimisation

--- a/index.html
+++ b/index.html
@@ -50,27 +50,9 @@
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
                             <li class="glide__slide">                                
-                                <div class="slider_container">
-                                    <div class="container_left">
-                                        <img alt="Onboard screengrab" src="images/onboard_screengrab.png">
-                                        <div style="display: flex">
-                                            <a class="button_light" target="_blank" rel="noreferrer" href="https://onboardteam.herokuapp.com">Visit Live</a>
-                                            <a class="button_light" target="_blank" rel="noreferrer" href="https://github.com/johnchaigh/onboard">View Code</a>
-                                        </div>
-                                    </div>
-                                    <div class="container_right">
-                                        <div class="project_text">
-                                            <h3>Onboard</h3>
-                                                <p>
-                                                    Designed and built in collaboration with a large financial services business, Onboard is a powerful web application for the better training and tracking of new employees.
-                                                    It was built to modernise their outdated, spreadsheet driven enrollment processes and allow senior managers better visibility across the whole workforce. All this data is brought together to make predictions on the success of a particular individual, their graduation date and where they sit in relation to their peers.
-                                                    <br>
-                                                    <br>
-                                                    Built in Python on the Flask Framework, Onboard uses a SQLite3 database to manage logins performance tracking across multiple tiers and all the pathway data associated.
-                                                </p>
-                                                <p><sub>Python | SQLite3 | Flask | Javascript | HTML </sub></p>
-                                        </div>
-                                    </div>
+                                <div class="slider_container_splash">
+                                    <h1>Welcome to my portfolio 👋 I'm a fledging deleloper in South West England looking to land my first job. Thanks for stopping by!</h1>
+                                    <p>Swipe to view my projects --></p>
                                 </div>
                             </li>
                             <li class="glide__slide">                                
@@ -93,23 +75,73 @@
                                                     <br>
                                                     The backend uses Python NLP module 'Spacy' to parse the text and pickout words from a large skills library stored in the SQLite3 database. There is a login option where you can store your cv information and even search for local jobs based on the skills in your profile.
                                                 </p>
-                                                <p><sub>NLP | Python | SQLite3 | Flask | Javascript | HTML </sub></p>
+                                                <p><sub>NLP | Python | SQLite3 | Flask | Javascript | HTML | Heroku </sub></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="glide__slide">                                
+                                <div class="slider_container">
+                                    <div class="container_left">
+                                        <img alt="Onboard screengrab" src="images/onboard_screengrab.png">
+                                        <div style="display: flex">
+                                            <a class="button_light" target="_blank" rel="noreferrer" href="https://onboardteam.herokuapp.com">Visit Live</a>
+                                            <a class="button_light" target="_blank" rel="noreferrer" href="https://github.com/johnchaigh/onboard">View Code</a>
+                                        </div>
+                                    </div>
+                                    <div class="container_right">
+                                        <div class="project_text">
+                                            <h3>Onboard</h3>
+                                                <p>
+                                                    Designed and built in collaboration with a large financial services business, Onboard is a powerful web application for the better training and tracking of new employees.
+                                                    It was built to modernise their outdated, spreadsheet driven enrollment processes and allow senior managers better visibility across the whole workforce. All this data is brought together to make predictions on the success of a particular individual, their graduation date and where they sit in relation to their peers.
+                                                    <br>
+                                                    <br>
+                                                    Built in Python on the Flask Framework, Onboard uses a SQLite3 database to manage logins performance tracking across multiple tiers and all the pathway data associated.
+                                                </p>
+                                                <p><sub>Python | SQLite3 | Flask | Javascript | HTML | Heruko </sub></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="glide__slide">                                
+                                <div class="slider_container">
+                                    <div class="container_left">
+                                        <img alt="Onboard screengrab" src="images/holidays_screengrab.jpg">
+                                        <div style="display: flex">
+                                            <a class="button_light" style="width: 100%;" target="_blank" rel="noreferrer" href="https://www.figma.com/proto/kD1d9mxBouEFU8BTUmRRvH/Holiday_planner?node-id=19%3A67">View Designs on Figma</a>
+                                        </div>
+                                    </div>
+                                    <div class="container_right">
+                                        <div class="project_text">
+                                            <h3>Holidays (WIP)</h3>
+                                                <p>
+                                                    This is an app to provide leaders manage leave for their teams. Users can login and see their booked holiday, any pending leave requests and their remaining allocation. 
+                                                    On the other end management can view who has requested time off when and accept or decline requested leave. A simple but useful tool!
+                                                    <br>
+                                                    <br>
+                                                    I'm creating this app to help improve my C++ skills, as well as learn the basics of the .NET framework and Azure deployment. The second iteration will move to a js frontend, but I am keeping things simple for V1.
+                                                </p>
+                                                <p><sub>C++ | .NET | AZURE | SQLite3 | Javascript | HTML </sub></p>
                                         </div>
                                     </div>
                                 </div>
                             </li>
                         </ul>
                     </div>
-                    <div class="glide">                  
-                        <div class="glide__arrows" data-glide-el="controls" style="text-align: center; padding-top: 45px">
-                            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">Previous Project</button>
-                            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">Next Project</button>
+                    <div class="glide">    
+                        <div class="glide_buttons_desktop">
+                            <div class="glide__arrows glide_arrow_button" data-glide-el="controls" style="text-align: center; padding-top: 45px">
+                                <button class="glide_arrow_button_left" data-glide-dir="<"><</button>
+                                <button class="glide_arrow_button_right" data-glide-dir=">">></button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="glide">
-                        <div class="glide__bullets" data-glide-el="controls[nav]" style="text-align: center;">
-                            <button class="glide__bullet" data-glide-dir="=0"></button>
-                            <button class="glide__bullet" data-glide-dir="=1"></button>
+                        <div class="glide__bullet_desktop">
+                            <div class="glide__bullets" data-glide-el="controls[nav]" style="text-align: center;">
+                                <button class="glide__bullet" data-glide-dir="=0"></button>
+                                <button class="glide__bullet" data-glide-dir="=1"></button>
+                                <button class="glide__bullet" data-glide-dir="=2"></button>
+                            </div>    
                         </div>
                     </div>
                 </div>
@@ -117,10 +149,10 @@
         </div>
         <div id="myModal" class="modal">
             <div id="myModal" class="about_me">
-                <div style="height: 100%; overflow: hidden;" class="container_left">
+                <div class="container_left">
                     <img alt="Profile picture" src="images/profile_pic.jpeg">
                 </div>
-                <div class="container_right">
+                <div class="container_right_modal">
                     <h4>About Me</h4>
                     <p>Hi I'm John!
 
@@ -131,7 +163,7 @@
                         This was a great foundation to start building my own solutions and develop my learning further, but I was missing knowledge of professional working practices. Proper source code control, project management methodologies and the roles of each person in the team during the lifecycle. I enrolled in a course to fill the gap at Exeter College and now I feel ready to start breaking into the profession and start really learning.
                         <br><br>
                         Please reach out if you have any feedback or want to speak about anything further.</p>
-                    <p style="text-align: center;">Qualifications and training:</p>
+                    <h4>Qualifications and training:</h4>
                     <ul>
                         <li>BA(Hons) Graphic Design - Central St Martins School of Art and Design, London</li>
                         <li>CS50 Introduction to Computer Science - HarvardX</li>
