Bugfix - Mobile nav

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                                                     <br>
                                                     Built in Python on the Flask Framework, Onboard uses a SQLite3 database to manage logins performance tracking across multiple tiers and all the pathway data associated.
                                                 </p>
-                                                <p><sub>Python | SQLite3 | Flask | Javascript | HTML | Heruko </sub></p>
+                                                <p><sub>Python | SQLite3 | Flask | Javascript | HTML | Heroku
+                                                     </sub></p>
                                         </div>
                                     </div>
                                 </div>
@@ -141,6 +142,7 @@
                                 <button class="glide__bullet" data-glide-dir="=0"></button>
                                 <button class="glide__bullet" data-glide-dir="=1"></button>
                                 <button class="glide__bullet" data-glide-dir="=2"></button>
+                                <button class="glide__bullet" data-glide-dir="=3"></button>
                             </div>    
                         </div>
                     </div>
