--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <ul class="glide__slides">
                             <li class="glide__slide">                                
                                 <div class="slider_container_splash">
-                                    <h1>Welcome to my portfolio 👋 I'm a fledging deleloper in South West England looking to land my first job. Thanks for stopping by!</h1>
+                                    <h1>Welcome to my portfolio 👋 I'm a fledging developer in South West England looking to land my first job. Thanks for stopping by!</h1>
                                     <p>Swipe to view my projects --></p>
                                 </div>
                             </li>
