--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+        <!-- Hotjar Tracking Code for https://www.jhaigh.com -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:2768830,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
     </header>
     <body>
         <div class="topnav">
@@ -97,7 +109,7 @@
                                                     It was built to modernise their outdated, spreadsheet driven enrollment processes and allow senior managers better visibility across the whole workforce. All this data is brought together to make predictions on the success of a particular individual, their graduation date and where they sit in relation to their peers.
                                                     <br>
                                                     <br>
-                                                    Built in Python on the Flask Framework, Onboard uses a SQLite3 database to manage logins performance tracking across multiple tiers and all the pathway data associated.
+                                                    Built in Python on the Flask Framework. Onboard uses a SQLite3 database, with logins and performance tracking managed by data access objects across multiple roles and all the pathway data associated.
                                                 </p>
                                                 <p><sub>Python | SQLite3 | Flask | Javascript | HTML | Heroku
                                                      </sub></p>
@@ -121,9 +133,9 @@
                                                     On the other end management can view who has requested time off when and accept or decline requested leave. A simple but useful tool!
                                                     <br>
                                                     <br>
-                                                    I'm creating this app to help improve my C++ skills, as well as learn the basics of the .NET framework and Azure deployment. The second iteration will move to a js frontend, but I am keeping things simple for V1.
+                                                    I'm creating this app to help improve my C# skills, as well as learn the basics of the .NET framework and Azure deployment. Data will be managed through object relational mapping. The second iteration will move to a js frontend, but I am keeping things simple for V1.
                                                 </p>
-                                                <p><sub>C++ | .NET | AZURE | SQLite3 | Javascript | HTML </sub></p>
+                                                <p><sub>C#| ASP.NET | AZURE | SQLite | Javascript | HTML </sub></p>
                                         </div>
                                     </div>
                                 </div>
@@ -151,8 +163,8 @@
         </div>
         <div id="myModal" class="modal">
             <div id="myModal" class="about_me">
-                <div class="container_left">
-                    <img alt="Profile picture" src="images/profile_pic.jpeg">
+                <div class="container_left_modal">
+                    <img alt="Profile picture" style="object-fit: cover;" src="images/profile_pic.jpeg">
                 </div>
                 <div class="container_right_modal">
                     <h4>About Me</h4>
@@ -170,6 +182,7 @@
                         <li>BA(Hons) Graphic Design - Central St Martins School of Art and Design, London</li>
                         <li>CS50 Introduction to Computer Science - HarvardX</li>
                         <li>Software Development (12-week part-time bootcamp) - Exeter College</li>
+                        <li>Security Cleared (SC) 2021</li>
                     </ul>
                 </div>
                 
